--- a/A_BullsEye/Base.lproj/Main.storyboard
+++ b/A_BullsEye/Base.lproj/Main.storyboard
@@ -22,9 +22,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="BHS-6F-GQT">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background-3" translatesAutoresizingMaskIntoConstraints="NO" id="BHS-6F-GQT">
                                 <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.31665166884816753" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.15959129648760328" green="0.15959129648760328" blue="0.15959129648760328" alpha="0.90547284031413611" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="0.90547284029999997" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2ka-Kb-qms" userLabel="Slider Stack">
                                 <rect key="frame" x="60.5" y="21" width="447.5" height="57"/>
@@ -83,7 +84,7 @@
                             </stackView>
                             <button autoresizesSubviews="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oJZ-X1-etn">
                                 <rect key="frame" x="224" y="135" width="120" height="50"/>
-                                <color key="backgroundColor" red="0.9980061267" green="1" blue="0.61961615940000003" alpha="0.14530840968586387" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40166884819999998" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="nf2-oI-eDR"/>
                                     <constraint firstAttribute="height" constant="50" id="x6E-af-JMc"/>
@@ -126,7 +127,7 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="scd-Hx-szY">
                                 <rect key="frame" x="20" y="268" width="49" height="32"/>
-                                <color key="backgroundColor" red="0.9980061267" green="1" blue="0.61961615940000003" alpha="0.1453084097" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.043863194716587763" green="0.0" blue="0.14671035640495866" alpha="0.40166884816753928" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="14"/>
                                 <state key="normal" title="Restart">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -179,7 +180,7 @@
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Myp-ss-R54">
                                 <rect key="frame" x="466" y="268" width="82" height="32"/>
-                                <color key="backgroundColor" red="0.9980061267" green="1" blue="0.61961615940000003" alpha="0.1453084097" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.043863194716587763" green="0.0" blue="0.14671035640495866" alpha="0.40166884816753928" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="14"/>
                                 <state key="normal" title="How to play">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -239,6 +240,7 @@
                         <outlet property="RoundLabel" destination="O7M-ub-mkl" id="Q4z-Ec-nP7"/>
                         <outlet property="ScoreLabel" destination="EWo-Xf-uUh" id="FIu-3J-Zoq"/>
                         <outlet property="aimLabel" destination="OpU-Yn-cvK" id="gdJ-bo-Zw4"/>
+                        <outlet property="backgroundImage" destination="BHS-6F-GQT" id="iGi-zr-ajc"/>
                         <outlet property="highscoreLabel" destination="LkT-Yz-qTZ" id="uNg-cJ-kWy"/>
                         <outlet property="slider" destination="Pgh-Pv-jyp" id="mTQ-4d-YeB"/>
                         <outlet property="sliderValueLabel" destination="bmg-GZ-io5" id="5Fi-kS-7eh"/>
@@ -266,14 +268,15 @@
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Ddb-Oz-KDL">
                                         <rect key="frame" x="0.0" y="0.0" width="468" height="239.5"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                        <string key="text">The Rules of Bulls eye game
+                                        <string key="text">The Rules of Bull's eye game
 
-Your goal is to place the slider as close as possible to the target value
-The closer you are, the more points you score.
+This is the awesome game of Bull's Eye where you can win points and earn fame by dragging a slider.
+
+Your goal is to place the slider as close as possible to the target value. The closer you are, the more points you score.
 
 Enjoy!</string>
                                         <color key="textColor" red="1" green="0.97242755889999999" blue="0.73925835039999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="16"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GL1-Yw-ae7">
@@ -306,6 +309,7 @@ Enjoy!</string>
         </scene>
     </scenes>
     <resources>
-        <image name="Background" width="568" height="320"/>
+        <image name="Background" width="960" height="543"/>
+        <image name="Background-3" width="960" height="543"/>
     </resources>
 </document>
